Replace supervisord with bash job control so that we can certify the AmazonLinux Docker image
https://github.com/opendistro-for-elasticsearch/opendistro-build/issues/696